updated overflow scroll to hidden for FF tabbing issue

--- a/css/training.css
+++ b/css/training.css
@@ -26,7 +26,7 @@ h4 {
     top:auto;
     width:1px;
     height:1px;
-    overflow:scroll;
+    overflow:hidden;
     z-index:-999;
 }
 nav {
@@ -184,7 +184,7 @@ a.skip-main {
     top:auto;
     width:1px;
     height:1px;
-    overflow:scroll;
+    overflow:hidden;
     z-index:-999;
 }
 a.skip-main:focus, a.skip-main:active {
